# MonoGame.ShaderCompiler

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: main.yml
include/: dxc_wrapper.h  spirv_wrapper.h
src/: dxc_wrapper.cpp  spirv_wrapper.c
